<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ACTIONS -->
    <string name="m_next_action">Next</string>
    <string name="m_skip_action">Skip</string>
    <string name="m_save_action">Save</string>
    <string name="m_finish_action">Finish</string>

    <!-- WELCOME -->
    <string name="welcome_hello">Hello!!</string>
    <string name="welcome_msg">It is recommended to complete the initial setup. Or setup later using the settings menu in the home page.</string>
    <string name="welcome_button">Go!</string>

    <!--About-->
    <string name="about_text">This app was implemented based on the vision of \n <b> Dr. Ramon Bonegio </b> \n \n By \n Nithya Konda, Lipsa Ray, Kun Mao and Quynh Vo \n University of Massachusetts, Boston \n Class of 2015 \n \n In liason with \n <a href= "http://www.lupus.org">The lupus foundation of America</a> \n <a href = "http://www.lupusne.org">The lupus foundation of New England</a>  </string>



    <!-- PROFILE -->
    <string name="title_init_profile">Step 1 of 4</string>
    <string name="title_profile">Profile</string>
    <string name="a_profile_name_hint">Enter Name</string>

    <!-- MOOD ALERT -->
    <string name="title_init_mood_alert">Step 2 of 4</string>
    <string name="title_mood_alert">Health Alert</string>
    <string name="a_mood_alert_desc">LupusMate keeps track of how healthy you feel everyday. Setup the frequency and time when you wish to be asked for your feedback.</string>
    <string name="a_mood_alert_note">Note: Recommended to set up two reminders, one after getting up in the morning and another before going to bed.</string>
    <string name="title_activity_mood_pop_up">Health Reminder</string>
    <string name="a_mood_alert_pop_up_text1">Hey!</string>
    <string name="a_mood_alert_pop_up_text2">How healthy are you feeling now?</string>
    <string name="popup_mood_text">Hey! How healthy are you feeling?</string>

    <!-- ACTIVITY SENSING -->
    <string name="title_init_activity_sense">Step 3 of 4</string>
    <string name="title_activity_sense">Activity Sensing</string>
    <string name="a_activity_sense_desc">Turn on activity sensing if you wish LupusMate to count the number of steps you take.</string>
    <string name="set_sensitivity_button">Set Sensitivity</string>
    <string name="a_activity_sense_toggle_on">Stop Activity Sensing</string>
    <string name="a_activity_sense_toggle_off">Start Activity Sensing</string>


    <string name="a_activity_sense_desc1">Adjust the sensitivity. And walk to test the setting.</string>
    <string name="a_activity_sense_tip">Tip: Turn off the screen and walk then check if the steps got updated.</string>

    <!-- MEDICINE ALERT -->
    <string name="title_init_medicine_alert">Step 4 of 4</string>
    <string name="title_medicine_alert">Medicine Reminders</string>
    <string name="title_activity_add_medicine">Medicine Details</string>
    <string name="a_add_medicine_name">Select medicine from the list or add new if not present in the list by clicking the add button.</string>
    <string name="a_add_medicine_dosage">Enter dosage and interval</string>
    <string name="a_add_medicine_dosage_hint">Eg. 10</string>
    <string name="a_add_medicine_unit">Mg</string>
    <string name="a_add_medicine_reminder">Set Reminders</string>
    <string name="a_add_medicine_instructions">Instructions</string>
    <string name="a_add_medicine_optional">(Optional)</string>
    <string name="a_add_medicine_instruction_hint">Type your own instructions</string>
    <string name="a_add_medicine_name_hint">Eg. Prednisone</string>
    <string name="d_add_new_medicine_title">Add New Medicine</string>
    <string name="notification_med_text">Time to take your medicines!</string>
    <string name="a_med_alert_pop_up_text2">Time to take your medicines!</string>

    <!-- COMMON -->
    <string name="app_name">LupusMate</string>
    <string name="popup_title">LupusMate Reminder</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome"></string>
    <string name="title_activity_init_mood_alert">InitMoodAlert</string>
    <string name="title_activity_init_medicine_alert">InitMedicineAlert</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_init_main">Android Alarm </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_edit_mood_alert">EditMoodAlert</string>
    <string name="title_activity_edit_medicine_alert">EditMedicineAlert</string>
    <string name="title_activity_init_profile">InitProfile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_share_info">ShareInfo</string>
    <string name="title_activity_medicine_pop_up">MedicinePopUp</string>
    <string name="task_affinity">PopUpDialog</string>
</resources>
