<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/main_layout_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/a_add_medicine_name"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/PurpleFont"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_background"
        android:padding="@dimen/panel_padding_compact"
        android:layout_below="@+id/space"
        android:layout_alignLeft="@+id/space"
        android:layout_alignStart="@+id/space"
        android:id="@+id/frameLayout2">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_medname"
            android:layout_gravity="center_horizontal|top"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:spinnerMode="dialog"/>

        <EditText
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_dosage1"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/a_add_medicine_dosage_hint"
            style="@style/GreyFont" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_units_exist"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:spinnerMode="dialog"/>
    </GridLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_below="@+id/frameLayout2"
        android:layout_centerHorizontal="true"
        android:id="@+id/space2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_add_alarm"
        android:id="@+id/set_reminder_button1"
        android:text="@string/a_add_medicine_reminder"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_button"
        android:textColor="#ffffffff"
        android:layout_below="@+id/space2" />

    <!--<FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/space3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/panel_background"
        android:padding="@dimen/panel_padding_compact">-->



    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_exstng_med_listView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/darkPurple"
            android:background="@drawable/panel_background"
            android:padding="20dp"
        android:layout_below="@+id/space10" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@+id/set_reminder_button1"
        android:layout_centerHorizontal="true"
        android:id="@+id/space10" />

    <!--</FrameLayout>-->

</RelativeLayout>