<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/panel_padding_compact"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.umb.cs682.projectlupus.activities.medicineAlert.AddMedicine" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/a_add_medicine_name"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/PurpleFont"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:id="@+id/space11" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_background"
        android:padding="@dimen/panel_padding_compact"
        android:id="@+id/linearlayout1"
        android:layout_below="@+id/space11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_med_name"
            android:backgroundTint="@color/darkPurple"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="fill_parent" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:id="@+id/ib_add_new_med"
            android:layout_weight="1"
            android:src="@drawable/ic_action_new"
            android:background="@drawable/round_corner_button" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearlayout1"
        android:id="@+id/space12" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/a_add_medicine_dosage"
        android:id="@+id/textView9"
        android:layout_below="@+id/space12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/PurpleFont"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:id="@+id/space13" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/space13"
        android:background="@drawable/panel_background"
        android:padding="@dimen/panel_padding_compact"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_dosage"
                android:textColor="@color/darkPurple"
                android:layout_weight="1"
                android:hint="@string/a_add_medicine_dosage_hint" />
            <Space
                android:layout_width="20dp"
                android:layout_height="fill_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/a_add_medicine_unit"
                android:textColor="@color/darkPurple"
                android:id="@+id/textView10"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_interval"
            android:checkedButton="@+id/rb_daily">
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Daily"
                android:textColor="@color/darkPurple"
                android:id="@+id/rb_daily"
                android:buttonTint="@color/darkPurple"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Weekly"
                android:textColor="@color/darkPurple"
                android:id="@+id/rb_weekly"
                android:buttonTint="@color/darkPurple"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Monthly"
                android:textColor="@color/darkPurple"
                android:id="@+id/rb_monthly"
                android:buttonTint="@color/darkPurple"/>

        </RadioGroup>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/space14" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Set Reminders"
        android:id="@+id/bt_set_rem"
        android:layout_below="@+id/space14"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_button"
        android:textColor="#ffffffff"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:layout_below="@+id/bt_set_rem"
        android:layout_centerHorizontal="true"
        android:id="@+id/space15" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_med_rems"
        android:layout_below="@+id/space15"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        android:background="@drawable/panel_background" />

</RelativeLayout>
